reorganized files for sharing

--- a/Processing.ipynb
+++ b/Processing.ipynb
@@ -3,6 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lauren\\Desktop\\OAlanguage\\texts\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,31 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "wikipedia = open('wikipedia_primary.txt', encoding=\"utf-8\").read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "93"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "acrl.count('href')"
    ]
   },
   {
@@ -352,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "199"
+       "93"
       ]
      },
      "execution_count": 30,
@@ -361,7 +360,7 @@
     }
    ],
    "source": [
-    "boai.count(\"href\")"
+    "acrl.count('href')"
    ]
   },
   {
@@ -372,7 +371,7 @@
     {
      "data": {
       "text/plain": [
-       "51"
+       "199"
       ]
      },
      "execution_count": 31,
@@ -381,7 +380,7 @@
     }
    ],
    "source": [
-    "brill.count(\"href\")"
+    "boai.count(\"href\")"
    ]
   },
   {
@@ -392,7 +391,7 @@
     {
      "data": {
       "text/plain": [
-       "91"
+       "51"
       ]
      },
      "execution_count": 32,
@@ -401,7 +400,7 @@
     }
    ],
    "source": [
-    "elsevier.count(\"href\")"
+    "brill.count(\"href\")"
    ]
   },
   {
@@ -412,7 +411,7 @@
     {
      "data": {
       "text/plain": [
-       "64"
+       "91"
       ]
      },
      "execution_count": 33,
@@ -421,7 +420,7 @@
     }
    ],
    "source": [
-    "springer.count(\"href\")"
+    "elsevier.count(\"href\")"
    ]
   },
   {
@@ -432,7 +431,7 @@
     {
      "data": {
       "text/plain": [
-       "56"
+       "64"
       ]
      },
      "execution_count": 34,
@@ -441,7 +440,7 @@
     }
    ],
    "source": [
-    "sage.count(\"href\")"
+    "springer.count(\"href\")"
    ]
   },
   {
@@ -452,7 +451,7 @@
     {
      "data": {
       "text/plain": [
-       "44"
+       "56"
       ]
      },
      "execution_count": 35,
@@ -461,7 +460,7 @@
     }
    ],
    "source": [
-    "iop.count(\"href\")"
+    "sage.count(\"href\")"
    ]
   },
   {
@@ -472,7 +471,7 @@
     {
      "data": {
       "text/plain": [
-       "49"
+       "44"
       ]
      },
      "execution_count": 36,
@@ -481,7 +480,7 @@
     }
    ],
    "source": [
-    "cambridge.count(\"href\")"
+    "iop.count(\"href\")"
    ]
   },
   {
@@ -492,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "49"
       ]
      },
      "execution_count": 37,
@@ -501,7 +500,7 @@
     }
    ],
    "source": [
-    "proquest.count(\"href\")"
+    "cambridge.count(\"href\")"
    ]
   },
   {
@@ -512,7 +511,7 @@
     {
      "data": {
       "text/plain": [
-       "411"
+       "2"
       ]
      },
      "execution_count": 38,
@@ -521,7 +520,7 @@
     }
    ],
    "source": [
-    "tf.count(\"href\")"
+    "proquest.count(\"href\")"
    ]
   },
   {
@@ -532,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "148"
+       "411"
       ]
      },
      "execution_count": 39,
@@ -541,7 +540,7 @@
     }
    ],
    "source": [
-    "oxford.count(\"href\")"
+    "tf.count(\"href\")"
    ]
   },
   {
@@ -552,7 +551,7 @@
     {
      "data": {
       "text/plain": [
-       "69"
+       "148"
       ]
      },
      "execution_count": 40,
@@ -561,7 +560,7 @@
     }
    ],
    "source": [
-    "nature.count(\"href\")"
+    "oxford.count(\"href\")"
    ]
   },
   {
@@ -572,7 +571,7 @@
     {
      "data": {
       "text/plain": [
-       "26"
+       "69"
       ]
      },
      "execution_count": 41,
@@ -581,7 +580,7 @@
     }
    ],
    "source": [
-    "wiley.count(\"href\")"
+    "nature.count(\"href\")"
    ]
   },
   {
@@ -592,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "122"
+       "26"
       ]
      },
      "execution_count": 42,
@@ -601,7 +600,7 @@
     }
    ],
    "source": [
-    "degruyter.count(\"href\")"
+    "wiley.count(\"href\")"
    ]
   },
   {
@@ -612,7 +611,7 @@
     {
      "data": {
       "text/plain": [
-       "27"
+       "122"
       ]
      },
      "execution_count": 43,
@@ -621,7 +620,7 @@
     }
    ],
    "source": [
-    "bmj.count(\"href\")"
+    "degruyter.count(\"href\")"
    ]
   },
   {
@@ -632,7 +631,7 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "27"
       ]
      },
      "execution_count": 44,
@@ -641,7 +640,7 @@
     }
    ],
    "source": [
-    "hindawi.count(\"href\")"
+    "bmj.count(\"href\")"
    ]
   },
   {
@@ -652,7 +651,7 @@
     {
      "data": {
       "text/plain": [
-       "24"
+       "7"
       ]
      },
      "execution_count": 45,
@@ -661,7 +660,7 @@
     }
    ],
    "source": [
-    "sparc.count(\"href\")"
+    "hindawi.count(\"href\")"
    ]
   },
   {
@@ -672,7 +671,7 @@
     {
      "data": {
       "text/plain": [
-       "331"
+       "24"
       ]
      },
      "execution_count": 46,
@@ -681,7 +680,7 @@
     }
    ],
    "source": [
-    "harvard.count(\"href\")"
+    "sparc.count(\"href\")"
    ]
   },
   {
@@ -692,7 +691,7 @@
     {
      "data": {
       "text/plain": [
-       "188"
+       "331"
       ]
      },
      "execution_count": 47,
@@ -701,7 +700,7 @@
     }
    ],
    "source": [
-    "RTRC.count(\"href\")"
+    "harvard.count(\"href\")"
    ]
   },
   {
@@ -712,7 +711,7 @@
     {
      "data": {
       "text/plain": [
-       "150"
+       "188"
       ]
      },
      "execution_count": 48,
@@ -721,7 +720,7 @@
     }
    ],
    "source": [
-    "suber.count(\"href\")"
+    "RTRC.count(\"href\")"
    ]
   },
   {
@@ -732,7 +731,7 @@
     {
      "data": {
       "text/plain": [
-       "93"
+       "150"
       ]
      },
      "execution_count": 49,
@@ -741,7 +740,7 @@
     }
    ],
    "source": [
-    "cornell.count(\"href\")"
+    "suber.count(\"href\")"
    ]
   },
   {
@@ -752,7 +751,7 @@
     {
      "data": {
       "text/plain": [
-       "42"
+       "93"
       ]
      },
      "execution_count": 50,
@@ -761,7 +760,7 @@
     }
    ],
    "source": [
-    "ku.count(\"href\")"
+    "cornell.count(\"href\")"
    ]
   },
   {
@@ -772,7 +771,7 @@
     {
      "data": {
       "text/plain": [
-       "416"
+       "42"
       ]
      },
      "execution_count": 51,
@@ -781,7 +780,7 @@
     }
    ],
    "source": [
-    "wikipedia.count(\"href\")"
+    "ku.count(\"href\")"
    ]
   },
   {
@@ -792,7 +791,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "416"
       ]
      },
      "execution_count": 52,
@@ -801,7 +800,7 @@
     }
    ],
    "source": [
-    "creativecommons.count(\"href\")"
+    "wikipedia.count(\"href\")"
    ]
   },
   {
@@ -812,7 +811,7 @@
     {
      "data": {
       "text/plain": [
-       "38"
+       "10"
       ]
      },
      "execution_count": 53,
@@ -821,7 +820,7 @@
     }
    ],
    "source": [
-    "oawg.count(\"href\")"
+    "creativecommons.count(\"href\")"
    ]
   },
   {
@@ -832,7 +831,7 @@
     {
      "data": {
       "text/plain": [
-       "153"
+       "38"
       ]
      },
      "execution_count": 54,
@@ -841,7 +840,7 @@
     }
    ],
    "source": [
-    "mit.count(\"href\")"
+    "oawg.count(\"href\")"
    ]
   },
   {
@@ -852,7 +851,7 @@
     {
      "data": {
       "text/plain": [
-       "74"
+       "153"
       ]
      },
      "execution_count": 55,
@@ -861,7 +860,7 @@
     }
    ],
    "source": [
-    "sherpa.count(\"href\")"
+    "mit.count(\"href\")"
    ]
   },
   {
@@ -872,10 +871,30 @@
     {
      "data": {
       "text/plain": [
-       "50"
+       "74"
       ]
      },
      "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sherpa.count(\"href\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1914,7 @@
        " ...]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,26 +1922,6 @@
    "source": [
     "import re\n",
     "re.findall(r'<[^<]+>', acrl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1169"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(re.findall(r'<[^<]+>', acrl))"
    ]
   },
   {
@@ -1942,12 +1941,32 @@
     }
    ],
    "source": [
-    "acrl.count('<')"
+    "len(re.findall(r'<[^<]+>', acrl))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1169"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acrl.count('<')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2633,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3584,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4316,7 +4335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -4492,7 +4511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -4956,7 +4975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5133,7 +5152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -5485,7 +5504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -6928,7 +6947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -7381,7 +7400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -7507,7 +7526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -7749,7 +7768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -7923,7 +7942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -8216,7 +8235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -8462,7 +8481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -8489,7 +8508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -8760,7 +8779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -9024,7 +9043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -9492,7 +9511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -10145,7 +10164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -11633,7 +11652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -12945,7 +12964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -13145,7 +13164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -13339,7 +13358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -13374,7 +13393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -13505,7 +13524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -13974,7 +13993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -14459,7 +14478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {
     "scrolled": false
    },
@@ -14767,7 +14786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14776,7 +14795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -14850,7 +14869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -14924,7 +14943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -14998,7 +15017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -15072,7 +15091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
