added some explanatory text to Jupyter notebook

--- a/Processing.ipynb
+++ b/Processing.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Language statistics processing \n",
+    "\n",
+    "This is a Jupyter Notebook file showing the Python code used for processing the texts and running textstat analysis. The work done in this Notebook includes:\n",
+    "* Creating a single combined text for each source from the multiple websites' HTML. \n",
+    "    * e.g. A single \"ACRL\" text was created out of the three files that contained the HTML from three different websites from ACRL explaining open access. \n",
+    "* Counting the number of links inside of the files by counting instances of \"href\". \n",
+    "* Cleaning the text files of HTML so that only the language is analyzed (to avoid counting HTML code in word counts, for example). \n",
+    "* Using the textstat package to count words and sentences that appear in each *combined text file*. These measures can be used to calculate the average number of words per sentence. \n",
+    "    * textstat was found from [this website] (https://pypi.org/project/textstat/) and imported from their github repository. \n",
+    "* Running a variety of text complexity measures available in textstat. \n",
+    "    * For more information on the complexity measures available in textstat, see [their website] (https://pypi.org/project/textstat/). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
