adding more explanatory text to Jupyter Notebook

--- a/Processing.ipynb
+++ b/Processing.ipynb
@@ -37,6 +37,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating the texts\n",
+    "\n",
+    "The next several cells show the combining of multiple text files into one single text per source. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -358,6 +367,15 @@
    "outputs": [],
    "source": [
     "wikipedia = open('wikipedia_primary.txt', encoding=\"utf-8\").read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Counting number of links\n",
+    "\n",
+    "In the next section, we are counting the number of links by counting the number of \"href\"s that appear in the HTML code. These numbers were added to our analysis spreadsheet. "
    ]
   },
   {
@@ -918,6 +936,15 @@
    ],
    "source": [
     "plos.count(\"href\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning the texts\n",
+    "\n",
+    "In this next section, we are cleaning all of the texts of HTML code by removing all text that appears between brackets. You can see previews of each text after it has been cleaned of code. This was used to verify that we weren't deleting anything unintentionally. "
    ]
   },
   {
@@ -14802,6 +14829,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Counting words and sentences\n",
+    "\n",
+    "In this next section we import the textstat package, and then count the number of words and sentences in each text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -14959,6 +14995,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Complexity Tests\n",
+    "\n",
+    "In the next section, we run three analyses of complexity of the texts: the SMOG test, the Flesch Reading Ease test, and a \"combined\" test that looks at all of the complexity tests available in textstat. These numbers were added to our analysis spreadsheet. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
@@ -15034,80 +15079,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13.0\n",
-      "23.0\n",
-      "13.0\n",
-      "21.0\n",
-      "14.0\n",
-      "20.0\n",
-      "11.0\n",
-      "18.0\n",
-      "18.0\n",
-      "16.0\n",
-      "20.0\n",
-      "22.0\n",
-      "13.0\n",
-      "17.0\n",
-      "16.0\n",
-      "14.0\n",
-      "17.0\n",
-      "16.0\n",
-      "17.0\n",
-      "24.0\n",
-      "14.0\n",
-      "24.0\n",
-      "17.0\n",
-      "25.0\n",
-      "13.0\n",
-      "16.0\n",
-      "27.0\n",
-      "9.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\n",
-    "    textstat.text_standard(elsevier_cleaned, float_output=True),\n",
-    "    textstat.text_standard(springer_cleaned, float_output=True),\n",
-    "    textstat.text_standard(sage_cleaned, float_output=True),\n",
-    "    textstat.text_standard(iop_cleaned, float_output=True),\n",
-    "    textstat.text_standard(cambridge_cleaned, float_output=True),\n",
-    "    textstat.text_standard(proquest_cleaned, float_output=True),\n",
-    "    textstat.text_standard(tf_cleaned, float_output=True),\n",
-    "    textstat.text_standard(oxford_cleaned, float_output=True),\n",
-    "    textstat.text_standard(nature_cleaned, float_output=True),\n",
-    "    textstat.text_standard(brill_cleaned, float_output=True),\n",
-    "    textstat.text_standard(wiley_cleaned, float_output=True),    \n",
-    "    textstat.text_standard(degruyter_cleaned, float_output=True),\n",
-    "    textstat.text_standard(bmj_cleaned, float_output=True),\n",
-    "    textstat.text_standard(hindawi_cleaned, float_output=True),\n",
-    "    textstat.text_standard(sparc_cleaned, float_output=True),\n",
-    "    textstat.text_standard(harvard_cleaned, float_output=True),\n",
-    "    textstat.text_standard(rtrc_cleaned, float_output=True),\n",
-    "    textstat.text_standard(suber_cleaned, float_output=True),\n",
-    "    textstat.text_standard(boai_cleaned, float_output=True),\n",
-    "    textstat.text_standard(cornell_cleaned, float_output=True),\n",
-    "    textstat.text_standard(kansas_cleaned, float_output=True),\n",
-    "    textstat.text_standard(wikipedia_cleaned, float_output=True),\n",
-    "    textstat.text_standard(creativecommons_cleaned, float_output=True),\n",
-    "    textstat.text_standard(acrl_cleaned, float_output=True),\n",
-    "    textstat.text_standard(oawg_cleaned, float_output=True),\n",
-    "    textstat.text_standard(mit_cleaned, float_output=True),\n",
-    "    textstat.text_standard(sherpa_cleaned, float_output=True),\n",
-    "    textstat.text_standard(plos_cleaned, float_output=True), \n",
-    "    sep='\\n',\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [
@@ -15176,6 +15147,80 @@
     "    textstat.flesch_reading_ease(mit_cleaned),\n",
     "    textstat.flesch_reading_ease(sherpa_cleaned),\n",
     "    textstat.flesch_reading_ease(plos_cleaned), \n",
+    "    sep='\\n',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n",
+      "23.0\n",
+      "13.0\n",
+      "21.0\n",
+      "14.0\n",
+      "20.0\n",
+      "11.0\n",
+      "18.0\n",
+      "18.0\n",
+      "16.0\n",
+      "20.0\n",
+      "22.0\n",
+      "13.0\n",
+      "17.0\n",
+      "16.0\n",
+      "14.0\n",
+      "17.0\n",
+      "16.0\n",
+      "17.0\n",
+      "24.0\n",
+      "14.0\n",
+      "24.0\n",
+      "17.0\n",
+      "25.0\n",
+      "13.0\n",
+      "16.0\n",
+      "27.0\n",
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    textstat.text_standard(elsevier_cleaned, float_output=True),\n",
+    "    textstat.text_standard(springer_cleaned, float_output=True),\n",
+    "    textstat.text_standard(sage_cleaned, float_output=True),\n",
+    "    textstat.text_standard(iop_cleaned, float_output=True),\n",
+    "    textstat.text_standard(cambridge_cleaned, float_output=True),\n",
+    "    textstat.text_standard(proquest_cleaned, float_output=True),\n",
+    "    textstat.text_standard(tf_cleaned, float_output=True),\n",
+    "    textstat.text_standard(oxford_cleaned, float_output=True),\n",
+    "    textstat.text_standard(nature_cleaned, float_output=True),\n",
+    "    textstat.text_standard(brill_cleaned, float_output=True),\n",
+    "    textstat.text_standard(wiley_cleaned, float_output=True),    \n",
+    "    textstat.text_standard(degruyter_cleaned, float_output=True),\n",
+    "    textstat.text_standard(bmj_cleaned, float_output=True),\n",
+    "    textstat.text_standard(hindawi_cleaned, float_output=True),\n",
+    "    textstat.text_standard(sparc_cleaned, float_output=True),\n",
+    "    textstat.text_standard(harvard_cleaned, float_output=True),\n",
+    "    textstat.text_standard(rtrc_cleaned, float_output=True),\n",
+    "    textstat.text_standard(suber_cleaned, float_output=True),\n",
+    "    textstat.text_standard(boai_cleaned, float_output=True),\n",
+    "    textstat.text_standard(cornell_cleaned, float_output=True),\n",
+    "    textstat.text_standard(kansas_cleaned, float_output=True),\n",
+    "    textstat.text_standard(wikipedia_cleaned, float_output=True),\n",
+    "    textstat.text_standard(creativecommons_cleaned, float_output=True),\n",
+    "    textstat.text_standard(acrl_cleaned, float_output=True),\n",
+    "    textstat.text_standard(oawg_cleaned, float_output=True),\n",
+    "    textstat.text_standard(mit_cleaned, float_output=True),\n",
+    "    textstat.text_standard(sherpa_cleaned, float_output=True),\n",
+    "    textstat.text_standard(plos_cleaned, float_output=True), \n",
     "    sep='\\n',\n",
     ")"
    ]
